--- a/css/draft.css
+++ b/css/draft.css
@@ -147,7 +147,7 @@
     flex-direction: column;
     gap: 10px;
     flex: 1;
-    min-height: 0;
+    min-height: 550px;
 }
 
 #player-list-container {
